--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,7 +51,7 @@ main {
 
 .card {
     position: absolute;
-    width: 320px;
+    width: 300px;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -121,5 +121,12 @@ main {
                     }
             }
         }
+    }
+}
+
+
+@media(min-width: 576px) {
+    .card {
+        width: 400px;
     }
 }
